Spacing fixed

--- a/Our-team/css/card19.css
+++ b/Our-team/css/card19.css
@@ -972,10 +972,7 @@ option {
     width: 230px;
   }
 
-  div.teamTitle {
-    margin-top: 60vh;
-  }
-
+ 
 
 
   #nomargin {
